# Telemetria-Dinamica

./: pyproject.toml  readme.md  requirements.txt  telemetry_state.json
src/: main.py
src/config/: settings.py
src/core/: exporter.py  packet.py  receiver.py  state.py  watchdog.py
src/infra/: logger.py  startup_config.py  websocket_server.py
